Created latest news partials

--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -324,6 +324,7 @@
     <Content Include="Views\Partials\Footer.cshtml" />
     <Content Include="Views\Partials\Hero.cshtml" />
     <Content Include="Views\Partials\NavBar.cshtml" />
+    <Content Include="Views\Partials\LatestNews.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
