--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ healthchecksdb
 /HighlyDeveloped.Web/App_Data/TEMP
 /HighlyDeveloped.Web/App_Data/Cache
 /HighlyDeveloped.Web/App_Data/Logs
+/HighlyDeveloped.Web/App_Data/Models
