--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -287,6 +287,7 @@
     <Content Include="config\logviewer.searches.config.js" />
     <Content Include="Global.asax" />
     <Content Include="ReadMe.txt" />
+    <Content Include="scripts\CookieConsent.js" />
     <Content Include="Views\ContentPage.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
