--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -285,6 +285,7 @@
     <Content Include="config\Lang\sv-SE.user.xml" />
     <Content Include="config\Lang\zh-CN.user.xml" />
     <Content Include="config\logviewer.searches.config.js" />
+    <Content Include="css\CookieConsent.css" />
     <Content Include="Global.asax" />
     <Content Include="ReadMe.txt" />
     <Content Include="scripts\CookieConsent.js" />
