Including Macro folder

--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -291,6 +291,7 @@
     <Content Include="ReadMe.txt" />
     <Content Include="scripts\CookieConsent.js" />
     <Content Include="Views\ContentPage.cshtml" />
+    <Content Include="Views\MacroPartials\Call to Action Macro.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
