--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -293,6 +293,7 @@
     <Content Include="Views\ContentPage.cshtml" />
     <Content Include="Views\MacroPartials\Call to Action Macro.cshtml" />
     <Content Include="Views\MacroPartials\Contact Form.cshtml" />
+    <Content Include="Views\Partials\Latest Tweets.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
