--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -331,6 +331,7 @@
     <Content Include="Views\Partials\Hero.cshtml" />
     <Content Include="Views\Partials\NavBar.cshtml" />
     <Content Include="Views\Partials\LatestNews.cshtml" />
+    <Content Include="Views\Partials\Contact Form.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
