--- a/HighlyDeveloped.Web/Web.config
+++ b/HighlyDeveloped.Web/Web.config
@@ -63,7 +63,11 @@
 			<!--<smtp from="noreply@example.com">
 				<network host="127.0.0.1" userName="username" password="password" />
 			</smtp>-->
-
+			
+			<!--TODO attribute from="" should not be hardcoded-->
+			<smtp deliveryMethod="SpecifiedPickupDirectory" from="highlydeveloped@gmail.com">
+				<specifiedPickupDirectory pickupDirectoryLocation="c:\temp\mail"/>
+			</smtp>
 		</mailSettings>
 	</system.net>
 	<system.web>
