Ignore media directory

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,4 @@ healthchecksdb
 /HighlyDeveloped.Web/App_Data/Cache
 /HighlyDeveloped.Web/App_Data/Logs
 /HighlyDeveloped.Web/App_Data/Models
+HighlyDeveloped.Web/Media/*
