--- a/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
+++ b/HighlyDeveloped.Web/HighlyDeveloped.Web.csproj
@@ -294,7 +294,7 @@
     <Content Include="Views\MacroPartials\Call to Action Macro.cshtml" />
     <Content Include="Views\MacroPartials\Contact Form.cshtml" />
     <Content Include="Views\Partials\Latest Tweets.cshtml" />
-    <Content Include="Views\search.cshtml" />
+    <Content Include="Views\Search.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
