--- a/HighlyDeveloped.Core/HighlyDeveloped.Core.csproj
+++ b/HighlyDeveloped.Core/HighlyDeveloped.Core.csproj
@@ -238,7 +238,10 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Controllers\ContactController.cs" />
+    <Compile Include="Interfaces\IEmailService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterServicesComposer.cs" />
+    <Compile Include="Services\EmailService.cs" />
     <Compile Include="ViewModel\ContactFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
